# routes/personnages.js
@@ -18,7 +18,7 @@ router.get('/', async (req, res) => {
   */
   try {
     await mongoose.connect(process.env.MONGODB_URI);
-    res.json(await Personnage.find());
+    res.json(await Personnage.find().sort({ name: 1 }));
   } catch (err) {
     console.log(err.message);
     res.status(500).json({ message: 'Une erreur est survenue...' });
@@ -26,6 +26,42 @@ router.get('/', async (req, res) => {
     mongoose.connection.close();
   }
 });
+
+/* GET personnages by id. */
+router.get('/id/:id', async (req, res) => {
+  /*
+  #swagger.tags = ['Personnages']
+  #swagger.description = 'Récupère un personnage par son id.'
+  #swagger.responses[200] = {
+    description: 'Personnage.',
+    schema: { $ref: "#/definitions/Personnage" }
+  }
+  #swagger.responses[404] = {
+    description: 'Personnage non trouvé.'
+  }
+  #swagger.responses[500] = {
+    description: 'Une erreur est survenue...'
+  }
+  */
+  try {
+    await mongoose.connect(process.env.MONGODB_URI);
+    const id = req.params.id;
+    const objectId = mongoose.Types.ObjectId(id);
+
+    const personnage = await Personnage.findById(objectId);
+    if (personnage) {
+      res.json(personnage);
+    } else {
+      res.status(404).json({ message: 'Personnage non trouvé.' });
+    }
+  } catch (err) {
+    console.log(err.message);
+    res.status(500).json({ message: 'Une erreur est survenue...' });
+  } finally {
+    mongoose.connection.close();
+  }
+});
+
 
 /* GET personnages filtered by request query */
 router.get('/filters', async (req, res) => {
@@ -42,7 +78,20 @@ router.get('/filters', async (req, res) => {
   */
   try {
     await mongoose.connect(process.env.MONGODB_URI);
-    res.json(await Personnage.find(req.query));
+    const query = req.query;
+    const filters = {};
+
+    if (typeof query.element === 'string') {
+      filters.element = query.element;
+    }
+    if (typeof query.weapon_type === 'string') {
+      filters.weapon_type = query.weapon_type;
+    }
+    if (typeof query.rarity === 'string') {
+      filters.rarity = query.rarity;
+    }
+    
+    res.json(await Personnage.find(filters).sort({ name: 1 }));
   } catch (err) {
     console.log(err.message);
     res.status(500).json({ message: 'Une erreur est survenue...' });
